--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -26,8 +26,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation rootProject.ext.depends.appcompat
+
     implementation rootProject.ext.depends.logger
     implementation rootProject.ext.depends.converterGson
     implementation rootProject.ext.depends.glide
     annotationProcessor rootProject.ext.depends.glideCompiler
+
+    implementation rootProject.ext.depends.butterknife
+    annotationProcessor rootProject.ext.depends.butterknifeCompiler
 }
