--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,11 @@ dependencies {
 
     implementation project(':baselib')
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation rootProject.ext.depends.appcompat
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation rootProject.ext.depends.butterknife
     annotationProcessor rootProject.ext.depends.butterknifeCompiler
     implementation rootProject.ext.depends.multidex
     implementation rootProject.ext.depends.converterGson
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
