--- a/config.gradle
+++ b/config.gradle
@@ -12,6 +12,7 @@ ext {
 
 
     def dependVersion = [
+            appcompat    : "1.2.0",
             butterknife  : "10.2.2",
             logger       : "2.2.0",
             multidex     : "1.0.3",
@@ -20,6 +21,8 @@ ext {
     ]
 
     depends = [
+            appcompat          : "androidx.appcompat:appcompat:$dependVersion.appcompat",
+
             glide              : "com.github.bumptech.glide:glide:$dependVersion.glide",
             glideCompiler      : "com.github.bumptech.glide:compiler:$dependVersion.glide",
             converterGson      : "com.squareup.retrofit2:converter-gson:$dependVersion.converterGson",
