--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,29 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+//            storeFile file('')
+//            keyAlias ''
+//            keyPassword ''
+//            storePassword ''
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters "x86", "armeabi", "armeabi-v7a"
+            }
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters "x86", "armeabi", "armeabi-v7a"
+            }
         }
     }
 
@@ -34,6 +53,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(':baselib')
+    implementation project(':widgetlib')
 
     implementation rootProject.ext.depends.appcompat
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -43,9 +63,13 @@ dependencies {
     implementation rootProject.ext.depends.multidex
     implementation rootProject.ext.depends.converterGson
 
-    implementation "com.squareup.retrofit2:retrofit:2.7.1"
-    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
-    implementation "com.squareup.okhttp3:okhttp:4.7.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
+    implementation "com.squareup.retrofit2:retrofit:2.8.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+    implementation "com.squareup.okhttp3:okhttp:4.8.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.18"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
 }
