--- a/widgetlib/src/main/AndroidManifest.xml
+++ b/widgetlib/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.app.xandone.baselib" />
+    package="com.app.xandone.widgetlib" />
