--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,10 +58,10 @@ dependencies {
     implementation rootProject.ext.depends.appcompat
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation rootProject.ext.depends.butterknife
-    annotationProcessor rootProject.ext.depends.butterknifeCompiler
-    implementation rootProject.ext.depends.multidex
-    implementation rootProject.ext.depends.converterGson
+    implementation depends.butterknife
+    annotationProcessor depends.butterknifeCompiler
+    implementation depends.multidex
+    implementation depends.converterGson
 
     implementation "com.squareup.retrofit2:retrofit:2.8.1"
     implementation "com.squareup.retrofit2:converter-gson:2.8.1"
