--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,13 +56,14 @@ dependencies {
     implementation project(':widgetlib')
 
     implementation rootProject.ext.depends.appcompat
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
-    implementation depends.butterknife
-    annotationProcessor depends.butterknifeCompiler
-    implementation depends.multidex
-    implementation depends.converterGson
+    implementation 'com.jakewharton:butterknife:10.2.2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.2'
 
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation "com.squareup.retrofit2:retrofit:2.8.1"
     implementation "com.squareup.retrofit2:converter-gson:2.8.1"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
