--- a/widgetlib/build.gradle
+++ b/widgetlib/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -28,6 +28,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    api depends.BaseRecyclerViewAdapterHelper
-    api depends.bottombar
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api 'com.roughike:bottom-bar:2.3.1'
+    api 'com.scwang.smart:refresh-layout-kernel:2.0.1'
+    api 'com.scwang.smart:refresh-header-classics:2.0.1'
 }
