--- a/widgetlib/build.gradle
+++ b/widgetlib/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     api 'com.roughike:bottom-bar:2.3.1'
     api 'com.scwang.smart:refresh-layout-kernel:2.0.1'
     api 'com.scwang.smart:refresh-header-classics:2.0.1'
+    api 'com.github.hackware1993:MagicIndicator:1.5.0'
 }
