--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTask" />
+        <activity android:name=".ui.articledetails.ArticleDetailsActivity" />
     </application>
 
 </manifest>
