--- a/widgetlib/build.gradle
+++ b/widgetlib/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation rootProject.ext.depends.appcompat
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     api 'com.roughike:bottom-bar:2.3.1'
