--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -72,5 +73,8 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.18"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    implementation 'com.github.Hitomis:transferee:1.6.1'
+    implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
 
 }
