--- a/widgetlib/build.gradle
+++ b/widgetlib/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     api 'com.scwang.smart:refresh-header-classics:2.0.1'
     api 'com.github.hackware1993:MagicIndicator:1.5.0'
     api 'com.youth.banner:banner:2.1.0'
+    api 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
