--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
 
     implementation 'com.liulishuo.okdownload:okdownload:1.0.7'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
