修改后台模块界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".ui.manager.chart.ChartDataActivity"
             android:label="统计" />
+        <activity
+            android:name=".ui.manager.admin.AdminListActivity"
+            android:label="管理员" />
     </application>
 
 </manifest>
