--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,9 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# app key ≈‰÷√
+STORE_FILE_PATH=../x123.jks
+STORE_PASSWORD=123456
+KEY_ALIAS=key0
+KEY_PASSWORD=123456
 
