--- a/widgetlib/build.gradle
+++ b/widgetlib/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -29,8 +29,9 @@ dependencies {
     implementation rootProject.ext.depends.appcompat
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
-    api 'com.roughike:bottom-bar:2.3.1'
-    api 'com.scwang.smart:refresh-layout-kernel:2.0.1'
+    //修改为官方的com.google.android.material.bottomnavigation.BottomNavigationView
+//    api 'com.roughike:bottom-bar:2.3.1'
+    api 'com.scwang.smart:refresh-layout-kernel:2.0.3'
     api 'com.scwang.smart:refresh-header-classics:2.0.1'
     api 'com.github.hackware1993:MagicIndicator:1.5.0'
     api 'com.youth.banner:banner:2.1.0'
