--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,8 @@
 ext {
 
     android = [
-            compileSdkVersion: 29,
-            buildToolsVersion: '29.0.3',
+            compileSdkVersion: 30,
+//            buildToolsVersion: '29.0.3',
             applicationId    : "com.app.xandone.yblogapp",
             minSdkVersion    : 19,
             targetSdkVersion : 29,
