--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,6 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:3.3.3'
     implementation 'com.tencent.bugly:nativecrashreport:3.7.700'
 
+    implementation 'com.google.android:flexbox:2.0.1'
+
 }
