--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     //三级联动
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
+
+    api 'com.github.li-xiaojun:XPopup:2.7.7'
 }
