--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,6 @@ dependencies {
     implementation project(':widgetlib')
 
     implementation rootProject.ext.depends.appcompat
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.jakewharton:butterknife:10.2.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.2'
@@ -111,7 +110,7 @@ dependencies {
     implementation 'com.github.Hitomis:transferee:1.6.1'
     implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
 
-    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.github.tbruyelle:rxpermissions:0.11'
 
     implementation 'com.liulishuo.okdownload:okdownload:1.0.7'
 
