--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -28,6 +28,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    //启用 viewBinding
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
