--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 
     //工具库
     api 'com.blankj:utilcodex:1.31.0'
+
+    // 沉浸式框架：https://github.com/gyf-dev/ImmersionBar
+    api 'com.gyf.immersionbar:immersionbar:3.0.0'
 }
