--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,4 +143,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    // 沉浸式框架：https://github.com/gyf-dev/ImmersionBar
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
 }
